[#noissue] Refactor MapperUtils to improve grouping logic